--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ol><a href="c-form.html">form.html</a></ol><br>
     <ol><a href="c-select.html">select.html</a></ol><br>
-    <ol><a href="c-phone.html">phone.html</a></ol><br>
+    <ol><a href="https://xian20060128.github.io/work3/phone.html">phone.html</a></ol><br>
     <ol><a href="c-inputtype.html">inputtype.html</a></ol><br>
     <ol><a href="c-label.html">label.html</a></ol><br>
 </body>
