--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ol><a href="https://xian20060128.github.io/work3/form.html">form.html</a></ol><br>
-    <ol><a href="https://xian20060128.github.io/work3/select.html"select.html</a></ol><br>
+    <ol><a href="https://xian20060128.github.io/work3/select.html">select.html</a></ol><br>
     <ol><a href="https://xian20060128.github.io/work3/phone.html">phone.html</a></ol><br>
     <ol><a href="https://xian20060128.github.io/work3/inputtype.html">inputtype.html</a></ol><br>
     <ol><a href="https://xian20060128.github.io/work3/label.html">label.html</a></ol><br>
